--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,11 @@
     "moment": "^2.22.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-notify-toast": "^0.5.0",
     "react-quill": "^1.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
+    "react-toastify": "^4.4.0",
     "reactstrap": "^6.5.0"
   },
   "scripts": {
@@ -18,7 +20,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  
   "eslintConfig": {
     "extends": "react-app"
   },
