--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "react": "^16.5.2",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
     "react-notify-toast": "^0.5.0",
     "react-quill": "^1.3.1",
@@ -22,7 +23,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  
+
   "eslintConfig": {
     "extends": "react-app"
   },
